[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/start_menu.gd" type="Script" id=1]
[ext_resource path="res://scripts/moving_button.gd" type="Script" id=2]
[ext_resource path="res://bgm/押尾コータロー - えんぴつと五線譜.ogg" type="AudioStream" id=3]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_color = Color( 0.929412, 0.94902, 0.372549, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "The Ball"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="single_start" type="Button" parent="."]
margin_left = 750.0
margin_top = 214.0
margin_right = 950.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 2 )
text = "Single"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="double_start" type="Button" parent="."]
margin_left = 750.0
margin_top = 339.0
margin_right = 950.0
margin_bottom = 389.0
custom_fonts/font = SubResource( 3 )
text = "Double"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 750.0
margin_top = 464.0
margin_right = 950.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="stage_buttons" type="Spatial" parent="."]

[node name="stage1_start" type="Button" parent="stage_buttons"]
margin_left = -200.0
margin_top = 188.0
margin_right = -50.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 5 )
text = "Stage 1"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start = -200
end = 80
time = 0.5

[node name="Timer" type="Timer" parent="stage_buttons/stage1_start"]
wait_time = 0.1
one_shot = true

[node name="stage2_start" type="Button" parent="stage_buttons"]
margin_left = -200.0
margin_top = 288.0
margin_right = -49.0
margin_bottom = 333.0
custom_fonts/font = SubResource( 6 )
text = "Stage 2"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start = -200
end = 80
time = 0.5

[node name="Timer" type="Timer" parent="stage_buttons/stage2_start"]
wait_time = 0.3
one_shot = true

[node name="track_start" type="Button" parent="stage_buttons"]
margin_left = -200.0
margin_top = 388.0
margin_right = -50.0
margin_bottom = 442.0
custom_fonts/font = SubResource( 2 )
text = "Track"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start = -200
end = 80
time = 0.5

[node name="Timer" type="Timer" parent="stage_buttons/track_start"]
wait_time = 0.5
one_shot = true

[node name="playground_start" type="Button" parent="stage_buttons"]
margin_left = -200.0
margin_top = 488.0
margin_right = -50.0
margin_bottom = 542.0
custom_fonts/font = SubResource( 2 )
text = "Ground"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start = -200
end = 80
time = 0.5

[node name="Timer" type="Timer" parent="stage_buttons/playground_start"]
wait_time = 0.7
one_shot = true

[node name="options_menu" type="Spatial" parent="."]
[connection signal="pressed" from="single_start" to="." method="_on_single_start_pressed"]
[connection signal="pressed" from="double_start" to="." method="_on_double_start_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="stage_buttons/stage1_start" to="." method="_on_stage1_start_pressed"]
[connection signal="timeout" from="stage_buttons/stage1_start/Timer" to="stage_buttons/stage1_start" method="_on_Timer_timeout"]
[connection signal="pressed" from="stage_buttons/stage2_start" to="." method="_on_stage2_start_pressed"]
[connection signal="timeout" from="stage_buttons/stage2_start/Timer" to="stage_buttons/stage2_start" method="_on_Timer_timeout"]
[connection signal="pressed" from="stage_buttons/track_start" to="." method="_on_track_start_pressed"]
[connection signal="timeout" from="stage_buttons/track_start/Timer" to="stage_buttons/track_start" method="_on_Timer_timeout"]
[connection signal="pressed" from="stage_buttons/playground_start" to="." method="_on_playground_start_pressed"]
[connection signal="timeout" from="stage_buttons/playground_start/Timer" to="stage_buttons/playground_start" method="_on_Timer_timeout"]
